--- a/Task-07_JS-Advanced/styles.css
+++ b/Task-07_JS-Advanced/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Courier New', Courier, monospace;
+}
+
 table, tr, td {
     border: 1px solid black;
     border-collapse: collapse;
