--- a/Task-10_Browser-game/src/scss/_vars.scss
+++ b/Task-10_Browser-game/src/scss/_vars.scss
@@ -1,20 +1,11 @@
 /**
  * Variables
 */
-
-/* Typography */
-/* Breakpoints */
-/* Paths */
-/* Grid setup */
-/* Colour palette */
 $black: #000;
 $white: #fff;
 $light-gray: #f1f1f1;
 
 $body-background-color: #333;
-$foreground-color: #fff;
-$caption-color: #464646;
-$accent-color: #999;
-$link-color: #ec1f4e;
-
-/* Components */
+$table-border-color: #464646;
+$main-text-color: #d7ba7d;
+$active-text-color: #ec1f4e;
