--- a/Task-10_Browser-game/src/scss/_vars.scss
+++ b/Task-10_Browser-game/src/scss/_vars.scss
@@ -9,3 +9,5 @@ $body-background-color: #333;
 $table-border-color: #464646;
 $main-text-color: #d7ba7d;
 $active-text-color: #ec1f4e;
+$button-background-color: #555;
+$active-button-background-color: #666;
