--- a/Task-10_Browser-game/src/scss/app.scss
+++ b/Task-10_Browser-game/src/scss/app.scss
@@ -12,3 +12,39 @@ body * {
 body *::selection {
     background: transparent;
 }
+
+.main_page_container {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+}
+
+.width_100 {
+    width: 100%;
+}
+
+.height_70 {
+    height: 70%;
+}
+
+.align_center {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.buttons_container {
+    height: 30%;
+    width: 50%;
+}
+
+.game_button {
+    width: 33%;
+    background-color: $button-background-color;
+}
+
+.game_button:hover {
+    background-color: $active-button-background-color;
+}
