Add some css classes

--- a/Task-10_Browser-game/src/scss/app.scss
+++ b/Task-10_Browser-game/src/scss/app.scss
@@ -48,3 +48,13 @@ body *::selection {
 .game_button:hover {
     background-color: $active-button-background-color;
 }
+
+.default-menu-item {
+    color: $main-text-color;
+}
+.current-menu-item {
+    background-color: $current-text-background-color;
+}
+.disable-menu-item {
+    color: $disable-text-color;
+}
