--- a/Task-10_Browser-game/src/scss/_vars.scss
+++ b/Task-10_Browser-game/src/scss/_vars.scss
@@ -8,6 +8,10 @@ $light-gray: #f1f1f1;
 $body-background-color: #333;
 $table-border-color: #464646;
 $main-text-color: #d7ba7d;
-$active-text-color: #ec1f4e;
+$current-text-color-old: #ec1f4e;
+$current-text-background-color-old: #803f4e;
+$current-text-color: #1fecbf;
+$current-text-background-color: #2c5c51;
+$disable-text-color: #756543;
 $button-background-color: #555;
 $active-button-background-color: #666;
