Add scrollbar styles

--- a/Task-10_Browser-game/src/scss/styles.scss
+++ b/Task-10_Browser-game/src/scss/styles.scss
@@ -1,5 +1,7 @@
 @import 'vars';
 @import 'components';
+@import 'scrollbar';
+
 * {
     font-family: Consolas;
     background-color: $body-background-color;
