Add vertical_align_top stype

--- a/Task-10_Browser-game/src/scss/styles.scss
+++ b/Task-10_Browser-game/src/scss/styles.scss
@@ -42,6 +42,12 @@ body * {
     margin-right: auto;
 }
 
+.vertical_align_top {
+    vertical-align: top;
+    vertical-align: text-top;
+    margin-top: 0;
+}
+
 .buttons_container {
     height: 30%;
     width: 50%;
